--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_bloc: ^9.1.1
   http: ^1.4.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
